--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Главная</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="../static/css/header.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="static/css/main.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="static/css/header.css" media="screen">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -27,8 +27,8 @@
 
 
     <main>
-        <img src="../static/image/meow!.png" width="100px" style="float: right; margin: 50px 50px 0 0; z-index: 2;">
-        <img src="../static/image/image_cat.png" width="200px" style="float: right; margin: 80px 0 0 0; z-index: 3;">
+        <img src="static/image/meow!.png" width="100px" style="float: right; margin: 50px 50px 0 0; z-index: 2;">
+        <img src="static/image/image_cat.png" width="200px" style="float: right; margin: 80px 0 0 0; z-index: 3;">
     </main>
 
 
