--- a/index.html
+++ b/index.html
@@ -27,8 +27,22 @@
 
 
     <main>
-        <img src="static/image/meow!.png" width="100px" style="float: right; margin: 50px 50px 0 0; z-index: 2;">
-        <img src="static/image/image_cat.png" width="200px" style="float: right; margin: 80px 0 0 0; z-index: 3;">
+        <img src="static/image/meow!.png" width="70px" style="float: right; margin: 50px 50px 0 0;">
+        <img src="static/image/image_cat.png" width="130px" style="float: right; margin: 80px 0 0 0;">
+        <table>
+            <thead>
+                <tr>
+                    <th>Природные явления</th>
+                    <th>Описание</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Лес</td>
+                    <td>Насладитесь красотой леса и его живописными пейзажами. Возможно, вы даже встретите лесных обитателей, таких как олени и белки.</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 
 
