--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
     <header>
         <nav class='navbar'>
-            <a href="" class="navbtn" id="mainbtn">Моя страница</a>
-            <a href="" class="navbtn">Главная</a>
+            <a href="index.html" class="navbtn" id="mainbtn">Моя страница</a>
+            <a href="index.html" class="navbtn">Главная</a>
             <a href="#bottom" class="navbtn">Контакты</a>
             <a href="" class="navbtn">Достижения</a>
         </nav>
-        <a class="navbtn" id="loginbtn" href="">Login</a>
+        <a class="navbtn" id="loginbtn" href="html/login.html">Login</a>
     </header>
 
 
@@ -65,7 +65,7 @@
         <p class="contact_text"><b>Email:</b> kirill15022005@gmail.com</p>
         <p class="contact_text"><b>Телефон:</b> +7 (960) 470-79-81</p>
         </div>
-        <a href="" class="contact_text navbtn">Обратная связь</a>
+        <a href="html/feedback.html" class="contact_text navbtn">Обратная связь</a>
     </footer>
 
 </body>
