--- a/html/feedback.html
+++ b/html/feedback.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Главная</title>
+    <title>Обратная связь</title>
     <link rel="stylesheet" type="text/css" href="../static/css/main.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../static/css/header.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../static/css/feedback.css" media="screen">
@@ -18,8 +18,8 @@
 <body>
     <header>
         <nav class='navbar'>
-            <a href="index.html" class="navbtn" id="mainbtn">Моя страница</a>
-            <a href="index.html" class="navbtn">Главная</a>
+            <a href="../index.html" class="navbtn" id="mainbtn">Моя страница</a>
+            <a href="../index.html" class="navbtn">Главная</a>
             <a href="#bottom" class="navbtn">Контакты</a>
             <a href="" class="navbtn">Достижения</a>
         </nav>
@@ -28,17 +28,31 @@
 
 
     <main>
-        <div>
-            <img src="../static/image/meow!.png" width="70px" style="float: right; margin: 50px 50px 0 0;">
-            <img src="../static/image/image_cat.png" width="130px" style="float: right; margin: 80px 0 0 0;">
-        </div>
-        <form>
+        
+        <form action="https://httpbin.org/post" method="POST">
+            <label class="label_box title">Обратная связь</label>
             <input type="text" name="name"  class="input" placeholder="ФИО">
-            <input type="password" name="password"  class="input" placeholder="Email">
-            <label class="label_checkbox">
-                <input type="checkbox" name="remeber" class="checkbox">Запомнить меня
+            <input type="email" name="password"  class="input" placeholder="Email">
+            <label class="label_box">
+                <input type="radio" name="distribut" id="friend" class="radiobutton">От друга
             </label>
-            <input type="button" class="btn" value="Войти">
+
+            <label class="label_box">
+                <input type="radio" name="distribut" id="internet" class="radiobutton">Из инернета
+            </label>
+
+           <label class="label_box">Тип обращения: 
+            <select name="type_feedback" class="input select">
+                <option value="complain">Жалоба</option>
+                <option value="complain">Предложение</option>
+            </select>
+            </label>
+            <textarea class="input" name="feedback_text" rows="5" cols="33"></textarea>
+            <input class="input" type="file">
+            <label class="label_box">
+                <input type="checkbox" name="remeber" class="checkbox">Даю согласие на обработку <br>персональных данных
+            </label>
+            <input type="submit" class="btn" value="Оправить">
             
         </form>
     </main>
