--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Главная</title>
+    <title>Авторизация</title>
     <link rel="stylesheet" type="text/css" href="../static/css/main.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../static/css/header.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../static/css/login.css" media="screen">
@@ -30,14 +30,10 @@
 
     <main>
         
-        <div>
-            <img src="../static/image/meow!.png" width="70px" style="float: right; margin: 50px 50px 0 0;">
-            <img src="../static/image/image_cat.png" width="130px" style="float: right; margin: 80px 0 0 0;">
-        </div>
         <form  action="https://httpbin.org/post" method="POST">
             <input type="text" name="login"  class="input" placeholder="Логин">
             <input type="password" name="password"  class="input" placeholder="Пароль">
-            <label class="label_checkbox">
+            <label class="label_box">
                 <input type="checkbox" name="remeber" class="checkbox">Запомнить меня
             </label>
             <input type="submit" class="btn" value="Войти">
