--- a/html/login.html
+++ b/html/login.html
@@ -18,6 +18,7 @@
 
 <body>
     <header>
+        <img src="../static/image/cat_logo.png" width="80px" height="80px" style="margin: auto 0 auto 25px;">
         <nav class='navbar'>
             <a href="../index.html" class="navbtn" id="mainbtn">Моя страница</a>
             <a href="../index.html" class="navbtn">Главная</a>
