--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="/static/image/cat_logo.png" width="80px" height="80px" style="margin: auto 0 auto 25px;">
+        <img src="static/image/cat_logo.png" width="80px" height="80px" style="margin: auto 0 auto 25px;">
         <nav class='navbar'>
             <a href="index.html" class="navbtn" id="mainbtn">Моя страница</a>
             <a href="index.html" class="navbtn">Главная</a>
