--- a/html/feedback.html
+++ b/html/feedback.html
@@ -33,7 +33,7 @@
         <form action="https://httpbin.org/post" method="POST">
             <label class="label_box title">Обратная связь</label>
             <input type="text" name="name"  class="input" placeholder="ФИО">
-            <input type="email" name="password"  class="input" placeholder="Email">
+            <input type="email" name="email"  class="input" placeholder="Email">
             <label class="label_box">
                 <input type="radio" name="distribut" id="friend" class="radiobutton">От друга
             </label>
