--- a/html/feedback.html
+++ b/html/feedback.html
@@ -19,8 +19,8 @@
     <header>
         <img src="../static/image/cat_logo.png" width="80px" height="80px" style="margin: auto 0 auto 25px;">
         <nav class='navbar'>
-            <a href="../index.html" class="navbtn" id="mainbtn">Моя страница</a>
-            <a href="../index.html" class="navbtn">Главная</a>
+            <a href="../index.php" class="navbtn" id="mainbtn">Моя страница</a>
+            <a href="../index.php" class="navbtn">Главная</a>
             <a href="#bottom" class="navbtn">Контакты</a>
             <a href="" class="navbtn">Достижения</a>
         </nav>
