--- a/laba8/index.html
+++ b/laba8/index.html
@@ -8,24 +8,24 @@
     <script src="static/main.js" defer></script>
 </head>
 <body>
-    <header class="header">
-        <nav>
-            <img class="logo" src="static/images/cat_white.png">
-            <div class="title">Facts about cats</div>
-        </nav>
-    </header>
-    <main>
-        <div class="container">
-            <div class="search-form">
-                <div>
-                    <input type="text" id="search" class="search-field">
-                    
-                    <button class="search-btn">Найти</button>
+<header class="header">
+    <nav>
+        <img class="logo" src="static/images/cat_white.png">
+        <div class="title">Facts about cats</div>
+    </nav>
+</header>
+<main>
+    <div class="container">
+        <div class="search-form">
+            <div>
+                <input type="text" id="search" class="search-field">
 
-                </div>
-                <ul id="autocomplete-list"></ul>
+                <button class="search-btn">Найти</button>
+
             </div>
-            <div class="pagination-info">
+            <ul id="autocomplete-list"></ul>
+        </div>
+        <div class="pagination-info">
                 <span>
                     Показывать по
                     <select name="per-page" class="per-page-btn">
@@ -39,36 +39,38 @@
                     </select>
                     записей на странице
                 </span>
-                <span class="current-interval-info">
-                    Показаны записи с <span class="current-interval-start">1</span> по <span class="current-interval-end">10</span> из <span class="total-count">190</span>
+            <span class="current-interval-info">
+                    Показаны записи с <span class="current-interval-start">1</span> по <span
+                    class="current-interval-end">10</span> из <span class="total-count">190</span>
                 </span>
-            </div>
-            <div class="facts-list" data-url="http://cat-facts-api.std-900.ist.mospolytech.ru/facts">
-                <div class="facts-list-item">
-                    <div class="item-content">
-                        Scottish sailer Alexander Selkirk once survived for 4 years on a deserted island thanks to feral cats that protected him
-                        from large rats during the night.
+        </div>
+        <div class="facts-list" data-url="http://cat-facts-api.std-900.ist.mospolytech.ru/facts">
+            <div class="facts-list-item">
+                <div class="item-content">
+                    Scottish sailer Alexander Selkirk once survived for 4 years on a deserted island thanks to feral
+                    cats that protected him
+                    from large rats during the night.
+                </div>
+                <div class="item-footer">
+                    <div class="author-name">
+                        Alex Wohlbruck
                     </div>
-                    <div class="item-footer">
-                        <div class="author-name">
-                            Alex Wohlbruck
-                        </div>
-                        <div class="upvotes">
-                            4
-                        </div>
+                    <div class="upvotes">
+                        4
                     </div>
                 </div>
-            </div>
-            <div class="pagination">
-                <!-- <button class="btn first-page-btn" data-page="1">Первая страница</button>
-                <div class="pages-btn">
-                    <button class="btn active" data-page="1">1</button>
-                    <button class="btn" data-page="2">2</button>
-                    <button class="btn" data-page="3">3</button>
-                </div>
-                <button class="btn last-page-btn">Последняя страница</button> -->
             </div>
         </div>
-    </main>
+        <div class="pagination">
+            <!-- <button class="btn first-page-btn" data-page="1">Первая страница</button>
+            <div class="pages-btn">
+                <button class="btn active" data-page="1">1</button>
+                <button class="btn" data-page="2">2</button>
+                <button class="btn" data-page="3">3</button>
+            </div>
+            <button class="btn last-page-btn">Последняя страница</button> -->
+        </div>
+    </div>
+</main>
 </body>
 </html>
