--- a/laba8/index.html
+++ b/laba8/index.html
@@ -16,15 +16,16 @@
 </header>
 <main>
     <div class="container">
-        <div class="search-form">
-            <div>
-                <input type="text" id="search" class="search-field">
-
+                <div class="search-form">
+            <div class="form">
+                <label>
+                    <input type="text" class="search-field">
+                </label>
                 <button class="search-btn">Найти</button>
-
             </div>
-            <ul id="autocomplete-list"></ul>
-        </div>
+            <div class="list">
+                <div class="hidden" id="search_box-result"></div>
+            </div>
         <div class="pagination-info">
                 <span>
                     Показывать по
